adding new components

--- a/src/app/cart/less/minicart.less
+++ b/src/app/cart/less/minicart.less
@@ -4,6 +4,13 @@
       font-weight: bold;
     }
   }
+  .dropdown-menu{
+    width: 250%;
+  }
+
+  .express-checkout {
+    margin-top: @form-group-margin-bottom;
+  }
   #minicart_line_item_list {
     padding: 0;
     right: 0;
@@ -20,4 +27,6 @@
       }
     }
   }
-}
+
+
+  }
