--- a/src/app/catalog/templates/product.list.tpl.html
+++ b/src/app/catalog/templates/product.list.tpl.html
@@ -19,6 +19,7 @@
                 <div class="item-price"><p>{{product.StandardPriceSchedule.PriceBreaks[0].Price | currency}} x {{product.StandardPriceSchedule.PriceBreaks[0].Quantity}}</p></div>
                 <div class="item-description" ng-if="product.Description"><p>{{product.Description}}</p></div>
             </div>
+            <ordercloud-quick-view product="product"></ordercloud-quick-view>
         </div>
     </div>
 </article>
