--- a/src/app/catalog/templates/catalog.tpl.html
+++ b/src/app/catalog/templates/catalog.tpl.html
@@ -1,5 +1,6 @@
 <article class="container">
     <ui-view>
+        <ordercloud-catalog-search maxprods=8 maxcats=8></ordercloud-catalog-search>
         <ordercloud-category-list categorylist="catalog.categories.Items"></ordercloud-category-list>
     </ui-view>
 </article>
