css for catalog tree and img fix

--- a/src/app/global.less
+++ b/src/app/global.less
@@ -96,3 +96,11 @@ colgroup {
     width:70px;
   }
 }
+
+//Theme
+@import (less) url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,900,300,100);
+
+img {
+  width: 100%;
+  max-width: 100%;
+}
