--- a/src/app/variables.less
+++ b/src/app/variables.less
@@ -15,3 +15,12 @@
 
 //Infinite Scroll
 @infinite-scroll-size: 600px;
+
+//Theme
+@brand-primary: #382948;
+@brand-secondary: #8a3b68;
+@gray-base: #424243;
+@white: @gray-lighter;
+
+@font-family-sans-serif: 'Roboto', sans-serif;
+@text-color: @gray-base;
