--- a/src/app/catalogSearch/less/catalogSearch.less
+++ b/src/app/catalogSearch/less/catalogSearch.less
@@ -19,8 +19,16 @@
   .popup-headers:nth-child(3) {
     padding: 0px 30px 5px 20px;
   }
-  .uib-dropdown-menu {
+  .dropdown-menu {
     padding-left: 20px;
+    position: static;
+    float: none;
+    display: block;
+    min-width: 160px;
+    background-color: transparent;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
 
   }
 }
