--- a/src/app/checkout/templates/confirmation.tpl.html
+++ b/src/app/checkout/templates/confirmation.tpl.html
@@ -21,27 +21,36 @@
     <div class="panel panel-default">
         <div class="panel-heading"><b>Payment Information</b></div>
         <div class="panel-body">
-            <div ng-if="orderConfirmation.orderPayments[0].Type == 'CreditCard'">
-                <p>Cardholder Name: {{orderConfirmation.creditCardDetails.CardholderName}}</p>
-                <p><i class="fa fa-cc-visa fa-2x"></i> ending in {{orderConfirmation.creditCardDetails.PartialAccountNumber}}</p>
-            </div>
-            <div ng-if="orderConfirmation.orderPayments[0].Type == 'SpendingAccount'">
-                Spending Account ID: {{orderConfirmation.spendingAccountDetails.ID}}
-            </div>
-            <div ng-if="orderConfirmation.orderPayments[0].Type == 'PurchaseOrder'">
-                Purchase Order
-            </div>
-            <!--<div>-->
+            <div ng-repeat="payment in orderConfirmation.orderPayments">
+                <div ng-if="payment.Type == 'CreditCard'">
+                    <p>Cardholder Name: {{orderConfirmation.orderPayments[$index].creditCardDetails.CardholderName}}</p>
+                    <p><i class="fa fa-2x"
+                          ng-class="{'fa-cc-visa': orderConfirmation.orderPayments[$index].creditCardDetails.CardType == 'Visa',
+                          'fa-cc-mastercard': orderConfirmation.orderPayments[$index].creditCardDetails.CardType == 'Master Card',
+                          'fa-cc-amex': orderConfirmation.orderPayments[$index].creditCardDetails.CardType == 'American Expresss',
+                          'fa-cc-discover': orderConfirmation.orderPayments[$index].creditCardDetails.CardType == 'Discover'}">
+                    </i>
+                        ending in {{orderConfirmation.orderPayments[$index].creditCardDetails.PartialAccountNumber}}</p>
+                </div>
+                <div ng-if="payment.Type == 'SpendingAccount'">
+                    Spending Account ID: {{orderConfirmation.orderPayments[$index].spendingAccountDetails.Name}}
+                </div>
+                <div ng-if="payment.Type == 'PurchaseOrder'">
+                    Purchase Order
+                </div>
+                <!--<div>-->
                 <!--Subtotal: {{orderConfirmation.currentOrder.Subtotal | currency}}-->
-            <!--</div>-->
-            <!--<div ng-if="orderConfirmation.currentOrder.xp.taxInfo">-->
+                <!--</div>-->
+                <!--<div ng-if="orderConfirmation.currentOrder.xp.taxInfo">-->
                 <!--Tax: {{orderConfirmation.currentOrder.xp.taxInfo | currency}}-->
-            <!--</div>-->
+                <!--</div>-->
+                Amount: {{payment.Amount | currency}}
+                <hr>
+            </div>
             <div>
                 Total: {{orderConfirmation.currentOrder.Subtotal | currency}}
             </div>
         </div>
-
     </div>
     <ordercloud-confirmation-lineitems order="orderConfirmation.currentOrder"></ordercloud-confirmation-lineitems>
     <div class="form-group pull-right">
