--- a/src/app/expressCheckout/templates/expressCheckoutReview.tpl.html
+++ b/src/app/expressCheckout/templates/expressCheckoutReview.tpl.html
@@ -1,14 +1,14 @@
 <article class="container-fluid full-width">
     <div class="order-review-header">
-	    <h3 class="page-header">
-		    Order Review
-	    </h3>
+        <h3 class="page-header">
+            Order Review
+        </h3>
         <div class="hidden-print form-group">
-            <button class="btn btn-default" ng-click="orderReview.print()">Print</button>
-            <button class="btn btn-info" ng-click="orderReview.removeFromFavorites()" ng-if="orderReview.submittedOrder.xp.favorite">
+            <button class="btn btn-default" ng-click="expressOrderReview.print()">Print</button>
+            <button class="btn btn-info" ng-click="expressOrderReview.removeFromFavorites()" ng-if="expressOrderReview.submittedOrder.xp.favorite">
                 <i class="fa fa-star"> </i> Remove from Favorites
             </button>
-            <button class="btn btn-primary" ng-click="orderReview.addToFavorites()" ng-if="!(orderReview.submittedOrder.xp.favorite)">
+            <button class="btn btn-primary" ng-click="expressOrderReview.addToFavorites()" ng-if="!(expressOrderReview.submittedOrder.xp.favorite)">
                 <i class="fa fa-star"> </i> Favorite This Order
             </button>
         </div>
@@ -16,34 +16,34 @@
             <div class="panel-heading"><b>Billing Address</b></div>
             <div class="panel-body">
                 <div>
-                    <p id="address_paragraph">{{orderReview.submittedOrder.BillingAddress | address: 'full'}}</p>
+                    <p id="address_paragraph">{{expressOrderReview.submittedOrder.BillingAddress | address: 'full'}}</p>
                 </div>
             </div>
         </div>
-        <div class="panel panel-default" ng-if="orderReview.submittedOrder.ShippingAddressID">
+        <div class="panel panel-default" ng-if="expressOrderReview.submittedOrder.ShippingAddressID">
             <div class="panel-heading"><b>Shipping Address</b></div>
             <div class="panel-body">
                 <div>
-                    <p id="address_paragraph">{{orderReview.LineItems.Items[0].ShippingAddress | address: 'full'}}</p>
+                    <p id="address_paragraph">{{expressOrderReview.LineItems.Items[0].ShippingAddress | address: 'full'}}</p>
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading"><b>Payment Information</b></div>
             <div class="panel-body">
-                <div ng-repeat="payment in orderReview.orderPayments">
+                <div ng-repeat="payment in expressOrderReview.orderPayments">
                     <div ng-if="payment.Type == 'CreditCard'">
-                        <p>Cardholder Name: {{orderReview.orderPayments[$index].creditCardDetails.CardholderName}}</p>
+                        <p>Cardholder Name: {{expressOrderReview.orderPayments[$index].creditCardDetails.CardholderName}}</p>
                         <p><i class="fa fa-2x"
-                              ng-class="{'fa-cc-visa': orderReview.orderPayments[$index].creditCardDetails.CardType == 'Visa',
-                          'fa-cc-mastercard': orderReview.orderPayments[$index].creditCardDetails.CardType == 'Master Card',
-                          'fa-cc-amex': orderReview.orderPayments[$index].creditCardDetails.CardType == 'American Expresss',
-                          'fa-cc-discover': orderReview.orderPayments[$index].creditCardDetails.CardType == 'Discover'}">
+                              ng-class="{'fa-cc-visa': expressOrderReview.orderPayments[$index].creditCardDetails.CardType == 'Visa',
+                          'fa-cc-mastercard': expressOrderReview.orderPayments[$index].creditCardDetails.CardType == 'Master Card',
+                          'fa-cc-amex': expressOrderReview.orderPayments[$index].creditCardDetails.CardType == 'American Expresss',
+                          'fa-cc-discover': expressOrderReview.orderPayments[$index].creditCardDetails.CardType == 'Discover'}">
                         </i>
-                            ending in {{orderReview.orderPayments[$index].creditCardDetails.PartialAccountNumber}}</p>
+                            ending in {{expressOrderReview.orderPayments[$index].creditCardDetails.PartialAccountNumber}}</p>
                     </div>
                     <div ng-if="payment.Type == 'SpendingAccount'">
-                        Spending Account ID: {{orderReview.orderPayments[$index].spendingAccountDetails.Name}}
+                        Spending Account ID: {{expressOrderReview.orderPayments[$index].spendingAccountDetails.Name}}
                     </div>
                     <div ng-if="payment.Type == 'PurchaseOrder'">
                         Purchase Order
@@ -58,7 +58,7 @@
                     <hr>
                 </div>
                 <div>
-                    Total: {{orderReview.submittedOrder.Total | currency}}
+                    Total: {{expressOrderReview.submittedOrder.Total | currency}}
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
                             <col>
                             <col style="width:75px;">
                         </colgroup>
-                        <tr ng-repeat-start="lineItem in orderReview.LineItems.Items track by $index" class="item_info">
+                        <tr ng-repeat-start="lineItem in expressOrderReview.LineItems.Items track by $index" class="item_info">
                             <td>
                                 {{lineItem.Quantity}}
                             </td>
@@ -82,7 +82,7 @@
                                 <small class="text-muted">{{lineItem.ProductID}}</small></br>
                             </td>
                         </tr>
-                        <tr ng-repeat-end class="shipping_info" ng-if="!orderReview.submittedOrder.ShippingAddressID">
+                        <tr ng-repeat-end class="shipping_info" ng-if="!expressOrderReview.submittedOrder.ShippingAddressID">
                             <div>
                                 <td colspan="3">
                                     <label>Shipping To:</label>
