adding catalog search directive

--- a/src/app/catalog/templates/category.list.tpl.html
+++ b/src/app/catalog/templates/category.list.tpl.html
@@ -1,4 +1,5 @@
 <article id="CategoryList">
+    <ordercloud-catalog-search></ordercloud-catalog-search>
     <h3 ng-if="categorylist.length > 0" class="page-header">
         {{categorylist.length > 1 ? 'Categories' : 'Category'}}
     </h3>
