Add logic to display current user Firstname on home page Add logic to display Icon on Base top if they have an icon, otherwise it will display default OC logo

--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -1,6 +1,8 @@
 <div class="container-fluid">
 	<header class="jumbotron text-center">
 		<h2 ng-bind="application.name"></h2>
+		<h6>Welcome {{home.currentUser}}</h6>
 	</header>
 </div>
+
 
