--- a/src/app/base/less/base.less
+++ b/src/app/base/less/base.less
@@ -135,6 +135,10 @@
       &.logo {
         flex:1 0 auto;
       }
+      img{
+       display:block;
+        margin:0 auto;
+      }
     }
   }
 }
