--- a/src/app/global.less
+++ b/src/app/global.less
@@ -104,3 +104,14 @@ img {
   width: 100%;
   max-width: 100%;
 }
+
+.nav {
+  > li {
+    > a {
+      &:hover,
+      &:focus {
+        color: @white;
+      }
+    }
+  }
+}
