--- a/src/app/catalog/templates/catalogFacets.tpl.html
+++ b/src/app/catalog/templates/catalogFacets.tpl.html
@@ -1,5 +1,5 @@
-<div class="facet-list-container">
-    <h4 class=facet-list ng-if="facetList">Refine by</h4>
+<div class="facet-list-container" ng-if="facetList">
+    <h4 class=facet-list>Refine by</h4>
     <div ng-repeat="(facetName, facet) in facetList" class="facet-list text-capitalize">
         <b>{{facetName}}</b>
         <fieldset class="facet-values" ng-repeat="(facetKey, facetSelected) in facet">
