styles for product detail

--- a/src/app/global.less
+++ b/src/app/global.less
@@ -206,3 +206,12 @@ ordercloud-quick-view .btn {
   left: 50%;
   transform: translate(-50%,-50%);
 }
+
+//Product Detail
+#product_view {
+  &> .row {
+    background: @white;
+    border-radius: @border-radius-base;
+    .drop-shadow;
+  }
+}
